src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Auto_matched_School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the Secondary School a student attends/has attended</description>
        <label>Auto matched School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Callista_School_ID__c</fullName>
        <description>Identifies the Callista ID assigned to the Secondary School. It is applicable only to school accounts</description>
        <label>Callista School ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSafeAccountId__c</fullName>
        <description>used for data manipulation activities</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>school email address</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>genders accommodated by a school</description>
        <label>Gender(s) Taught</label>
        <picklist>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Girls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coeducational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures if school offers Int&apos;l Baccalaureate. It is applicable only to school accounts</description>
        <label>Int&apos;l Baccalaureate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>Identifies the primary source where lead came from</description>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <description>Captures the type of location a school is located in. It is applicable only to school accounts.</description>
        <label>Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inner Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outer Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Remote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monash_Scholars__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field provides an indication that the School is part of the Monash Scholars program</description>
        <label>Monash Scholars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Students__c</fullName>
        <description>This field indicates the number of students that is in a school. This field is populated by the Schools Engagement users</description>
        <label>Number of Students in the School</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Id__c</fullName>
        <description>id from the original system</description>
        <externalId>true</externalId>
        <label>Original Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <description>A second phone number for this account</description>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures who is responsible for managing relationship with a B2B Account. It is applicable only to school accounts</description>
        <label>Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School_Previous_Name__c</fullName>
        <description>Captures a prior name of a school if it has changed. It is applicable only to school accounts</description>
        <label>School Previous Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Status__c</fullName>
        <description>Captures if a schools is active or not. It is applicable only to school accounts</description>
        <label>School Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <description>Captures the sector, such as Public, relevant to a School. It is applicable only to school accounts</description>
        <label>Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catholic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Streamline_ID__c</fullName>
        <description>ID from Streamline (Legacy) System</description>
        <label>Streamline ID (School)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URS_School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Under-represented schools (URS) are determined based on a combination of the Index of Community Socio-Educational Advantage (ICSEA), distribution of students by socioeconomic status, and transition to university data.</description>
        <label>URS School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VTAC_ID__c</fullName>
        <description>VTAC ID for Schools</description>
        <label>VTAC ID (School)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_10__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Captures which Year levels a school teaches. It is applicable only to school accounts</description>
        <label>Year 10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_11__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Captures which Year levels a school teaches. It is applicable only to school accounts</description>
        <label>Year 11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_12__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Captures which Year levels a school teaches. It is applicable only to school accounts</description>
        <label>Year 12</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Schools</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>School_Status__c</columns>
        <columns>School_Previous_Name__c</columns>
        <columns>VTAC_ID__c</columns>
        <columns>Year_10__c</columns>
        <columns>Year_11__c</columns>
        <columns>Year_12__c</columns>
        <columns>Year_7__c</columns>
        <columns>Year_8__c</columns>
        <columns>Year_9__c</columns>
        <columns>Relationship_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.School</value>
        </filters>
        <filters>
            <field>School_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Schools</label>
    </listViews>
    <listViews>
        <fullName>Individuals</fullName>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Individual</value>
        </filters>
        <label>Individuals</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Faculty</fullName>
        <active>true</active>
        <description>Describes a faculty within Monash University</description>
        <label>Faculty</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual</fullName>
        <active>true</active>
        <description>This is an individual account, which represents a person.</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization</fullName>
        <active>true</active>
        <description>This is used when adding a Corporate Account.</description>
        <label>Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>School</fullName>
        <active>true</active>
        <description>This is used when adding an Educational Facility</description>
        <label>School</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>